--- a/public/body/css/bootstrap.css
+++ b/public/body/css/bootstrap.css
@@ -1101,12 +1101,12 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #337ab7;
+  color: #737577;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #23527c;
+  color: white !important;
   text-decoration: underline;
 }
 a:focus {
